; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/aesni/extr_aesni.c_intel_sha256_update.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/aesni/extr_aesni.c_intel_sha256_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32)* @intel_sha256_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intel_sha256_update(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %8, align 8
  %15 = load i8*, i8** %6, align 8
  store i8* %15, i8** %12, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = ashr i32 %18, 3
  %20 = and i32 %19, 63
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %7, align 4
  %22 = shl i32 %21, 3
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = add nsw i32 %26, %23
  store i32 %27, i32* %25, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %10, align 4
  %30 = sub nsw i32 64, %29
  %31 = icmp slt i32 %28, %30
  br i1 %31, label %32, label %42

32:                                               ; preds = %3
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load i8*, i8** %34, align 8
  %36 = load i32, i32* %10, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8, i8* %35, i64 %37
  %39 = load i8*, i8** %12, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @memcpy(i8* %38, i8* %39, i32 %40)
  store i32 0, i32* %4, align 4
  br label %96

42:                                               ; preds = %3
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 1
  %45 = load i8*, i8** %44, align 8
  %46 = load i32, i32* %10, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i8, i8* %45, i64 %47
  %49 = load i8*, i8** %12, align 8
  %50 = load i32, i32* %10, align 4
  %51 = sub nsw i32 64, %50
  %52 = call i32 @memcpy(i8* %48, i8* %49, i32 %51)
  %53 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 2
  %55 = load i32, i32* %54, align 8
  %56 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 1
  %58 = load i8*, i8** %57, align 8
  %59 = call i32 @intel_sha256_step(i32 %55, i8* %58, i32 1)
  %60 = load i32, i32* %10, align 4
  %61 = sub nsw i32 64, %60
  %62 = load i8*, i8** %12, align 8
  %63 = sext i32 %61 to i64
  %64 = getelementptr inbounds i8, i8* %62, i64 %63
  store i8* %64, i8** %12, align 8
  %65 = load i32, i32* %10, align 4
  %66 = sub nsw i32 64, %65
  %67 = load i32, i32* %7, align 4
  %68 = sub nsw i32 %67, %66
  store i32 %68, i32* %7, align 4
  %69 = load i32, i32* %7, align 4
  %70 = icmp sge i32 %69, 64
  br i1 %70, label %71, label %89

71:                                               ; preds = %42
  %72 = load i32, i32* %7, align 4
  %73 = sdiv i32 %72, 64
  store i32 %73, i32* %11, align 4
  %74 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %75 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %74, i32 0, i32 2
  %76 = load i32, i32* %75, align 8
  %77 = load i8*, i8** %12, align 8
  %78 = load i32, i32* %11, align 4
  %79 = call i32 @intel_sha256_step(i32 %76, i8* %77, i32 %78)
  %80 = load i32, i32* %11, align 4
  %81 = mul nsw i32 %80, 64
  %82 = load i8*, i8** %12, align 8
  %83 = sext i32 %81 to i64
  %84 = getelementptr inbounds i8, i8* %82, i64 %83
  store i8* %84, i8** %12, align 8
  %85 = load i32, i32* %11, align 4
  %86 = mul nsw i32 %85, 64
  %87 = load i32, i32* %7, align 4
  %88 = sub nsw i32 %87, %86
  store i32 %88, i32* %7, align 4
  br label %89

89:                                               ; preds = %71, %42
  %90 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %91 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %90, i32 0, i32 1
  %92 = load i8*, i8** %91, align 8
  %93 = load i8*, i8** %12, align 8
  %94 = load i32, i32* %7, align 4
  %95 = call i32 @memcpy(i8* %92, i8* %93, i32 %94)
  store i32 0, i32* %4, align 4
  br label %96

96:                                               ; preds = %89, %32
  %97 = load i32, i32* %4, align 4
  ret i32 %97
}

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @intel_sha256_step(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
